src/objects/CustomDocumentLinkExts__c.object
<CustomObject>
    <description>Object that stores document ids, related object information for Notes Object</description>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <description>ContentDocumentId of a document</description>
        <inlineHelpText>ContentDocumentId of a document</inlineHelpText>
        <label>ContentDocumentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedEntityIdObjectName__c</fullName>
        <description>LinkedEntityIdObjectName of related Notes</description>
        <inlineHelpText>LinkedEntityIdObjectName of related Notes</inlineHelpText>
        <label>LinkedEntityIdObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedEntityId__c</fullName>
        <description>LinkedEntityId of related note</description>
        <inlineHelpText>LinkedEntityId of related note</inlineHelpText>
        <label>LinkedEntityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ContentDocumentLinkExt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CustomDocumentLinkExts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContentDocumentLinkExts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>